# Waifu-Generator

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: main.rs
src/models/: mod.rs
src/services/: mod.rs
src/ui/: main_window.rs  mod.rs  settings_window.rs
