[package]
name = "waifu-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.8"
gio = "0.21"
glib = "0.20.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
